studentapi-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: studentapi
  namespace: student

spec:
  replicas: 2

  selector:
    matchLabels:
      app: studentapi

  template:
    metadata:
      labels:
        app: studentapi

    spec:
      containers:
      - name: studentapi

        image: reenaso16/studentapi:v1
        imagePullPolicy: Always

        ports:
        - containerPort: 5000
