studentapp-deployment.yaml
apiVersion: apps/v1
kind: Deployment

metadata:
  name: studentapp
  namespace: student

spec:
  replicas: 2

  selector:
    matchLabels:
      app: studentapp

  template:
    metadata:
      labels:
        app: studentapp

    spec:
      containers:
      - name: studentapp

        image: reenaso16/studentapp:v1
        imagePullPolicy: Always

        ports:
        - containerPort: 80
