studentapi-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: studentapi-service
  namespace: student

spec:
  selector:
    app: studentapi

  ports:
  - protocol: TCP
    port: 5000
    targetPort: 5000

  type: ClusterIP
