studentapp-service.yaml
apiVersion: v1
kind: Service

metadata:
  name: studentapp-service
  namespace: student

spec:
  selector:
    app: studentapp

  ports:
  - port: 80
    targetPort: 80

  type: ClusterIP
