ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: student-ingress
  namespace: student

spec:
  ingressClassName: nginx

  rules:
  - host: student.local
    http:
      paths:

      - path: /api
        pathType: Prefix
        backend:
          service:
            name: studentapi-service
            port:
              number: 5000

      - path: /swagger
        pathType: Prefix
        backend:
          service:
            name: studentapi-service
            port:
              number: 5000

      - path: /
        pathType: Prefix
        backend:
          service:
            name: studentapp-service
            port:
              number: 80
